--- a/templates/employee/create.html
+++ b/templates/employee/create.html
@@ -9,7 +9,7 @@
     <div class="content-panel">
         <h3 class="text-center">{{ request.user.retailer_user.retailer.name }} Add Employee</h3>
         <div class="panel-body">
-            <form class="form-horizontal add-ledger-form" action="{% url 'employee:add_new_employee' %}" method="post" autocomplete="off">
+            <form class="form-horizontal add-ledger-form" action="{% url 'add_new_employee' %}" method="post" autocomplete="off">
                 <div class="form-group">
                     <div class="col-sm-12">
                         {% csrf_token %}
