--- a/templates/employee/employee_list.html
+++ b/templates/employee/employee_list.html
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-lg-12">
             <br>
-            <a href="{% url 'employee:add_new_employee' %}"><button type="button" id="empolyee" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Create Employee</button></a>
+            <a href="{% url 'add_new_employee' %}"><button type="button" id="empolyee" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Create Employee</button></a>
             <br><br>
             <div class="content-panel table-responsive">
                 <h2 class="text-center">Employee List</h2><div class="input-group custom-search-form col-md-4" style="left: 5px">
@@ -40,9 +40,9 @@
                         <td>{{ employee.address }}</td>
                         <td>{{ employee.date_of_joining }}</td>
                         <td>
-                            <a href="{% url 'employee:delete_employee' pk=employee.id %}"><button class="btn btn-danger btn-xs" title="Delete"><i class="fa  fa-trash-o"></i></button></a>
-                            <a href="{% url 'employee:employee_salary' pk=employee.pk %}"><button class="btn btn-primary btn-xs" title="Salary"><i class="fa  fa-money"></i></button></a>
-                            <a href="{% url 'employee:employee_salary_detail' pk=employee.pk %}"><button class="btn btn-info btn-xs" title="Employee Salary Record"><i class="fa fa-bar-chart-o"></i></button></a>
+                            <a href="{% url 'delete_employee' pk=employee.id %}"><button class="btn btn-danger btn-xs" title="Delete"><i class="fa  fa-trash-o"></i></button></a>
+                            <a href="{% url 'employee_salary' pk=employee.pk %}"><button class="btn btn-primary btn-xs" title="Salary"><i class="fa  fa-money"></i></button></a>
+                            <a href="{% url 'employee_salary_detail' pk=employee.pk %}"><button class="btn btn-info btn-xs" title="Employee Salary Record"><i class="fa fa-bar-chart-o"></i></button></a>
                         </td>
                     </tr>
                     {% endfor %}
