--- a/templates/employee/employee_salary_detail.html
+++ b/templates/employee/employee_salary_detail.html
@@ -3,8 +3,7 @@
 {% block content %}
 <div class="col-md-6">
     <br>
-    <a href="{% url 'employee:employee_list' %}"><button type="button" id="empolyee" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Employee List</button></a>
-    <a href="{% url 'employee:employee_salary' pk=employee.pk %}"><button type="button" id="empolyee-pay" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Do Payment</button></a>
+    <a href="{% url 'employee_salary' pk=employee.pk %}"><button type="button" id="empolyee-pay" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Do Payment</button></a>
     <br><br><br>
         <div class="col-lg-12 col-md-12 col-sm-12">
             <div class="panel panel-primary">
