--- a/templates/index.html
+++ b/templates/index.html
@@ -120,7 +120,7 @@
         <!--add employees div -->
         {% if request.user.retailer_user.role_type == request.user.retailer_user.ROLE_TYPE_SALESMAN or request.user.retailer_user.role_type == request.user.retailer_user.ROLE_TYPE_OWNER or request.user.retailer_user.role_type == request.user.retailer_user.ROLE_TYPE_VIEW_ACCOUNT %}
         <div class="col-lg-4 col-md-6 ">
-            <a href="{% url 'employee:employee_list' %}">
+            <a href="{% url 'employee_list' %}">
                 <div class="panel panel_bg_color">
                     <div class="panel-heading">
                         <div class="row">
