--- a/templates/expense/create_expense.html
+++ b/templates/expense/create_expense.html
@@ -4,12 +4,12 @@
 {% block content %}
     <div class="col-md-6">
         <br>
-        <a href="{% url 'expense:expense_list' %}"><button type="button" id="expense" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Expense List</button></a>
+        <a href="{% url 'expense_list' %}"><button type="button" id="expense" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Expense List</button></a>
         <br><br><br>
         <div class="content-panel">
             <h3 class="text-center">{{ request.user.retailer_user.retailer.name }} Expense</h3>
             <div class="panel-body">
-                <form class="form-horizontal add-ledger-form" action="{% url 'expense:add_new_expense' %}" method="post" autocomplete="off">
+                <form class="form-horizontal add-ledger-form" action="{% url 'add_new_expense' %}" method="post" autocomplete="off">
                     <div class="form-group">
                         <div class="col-sm-12">
                             {% csrf_token %}
