--- a/templates/expense/expense_list.html
+++ b/templates/expense/expense_list.html
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-lg-12">
             <br>
-            <a href="{% url 'expense:add_new_expense' %}"><button type="button" id="expense" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Create Expense</button></a>
+            <a href="{% url 'add_new_expense' %}"><button type="button" id="expense" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Create Expense</button></a>
             <br><br>
             <div class="content-panel table-responsive">
                 <h2 class="text-center">Orders</h2><div class="input-group custom-search-form col-md-4" style="left: 5px">
@@ -36,7 +36,7 @@
                         <td>{{ expense.description }}</td>
                         <td>{{ expense.date }}</td>
                         <td>
-                            <a href="{% url 'expense:delete_expense' pk=expense.id %}"><button class="btn btn-danger btn-xs"><i class="fa  fa-trash-o"></i></button></a>
+                            <a href="{% url 'delete_expense' pk=expense.id %}"><button class="btn btn-danger btn-xs"><i class="fa  fa-trash-o"></i></button></a>
                         </td>
                     </tr>
                     {% endfor %}
