--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
 <!--        add ledger div-->
         {% if request.user.retailer_user.role_type == request.user.retailer_user.ROLE_TYPE_LEDGER_VIEW or request.user.retailer_user.role_type == request.user.retailer_user.ROLE_TYPE_OWNER or request.user.retailer_user.role_type == request.user.retailer_user.ROLE_TYPE_VIEW_ACCOUNT %}
         <div class="col-lg-4 col-md-6 ">
-            <a href="{% url 'ledger:customer_ledger_list' %}">
+            <a href="{% url 'customer_ledger_list' %}">
                 <div class="panel panel_bg_color">
                     <div class="panel-heading">
                         <div class="row">
