--- a/templates/ledger/create_ledger.html
+++ b/templates/ledger/create_ledger.html
@@ -4,12 +4,12 @@
 {% block content %}
 <div class="col-md-6">
     <br>
-    <a href="{% url 'ledger:customer_ledger_list' %}"><button type="button" id="back-customer" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Ledger List</button></a>
+    <a href="{% url 'customer_ledger_list' %}"><button type="button" id="back-customer" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Ledger List</button></a>
     <br><br><br>
     <div class="content-panel">
         <h3 class="text-center">{{ request.user.retailer_user.retailer.name }} Customer / Ledger</h3>
         <div class="panel-body">
-            <form class="form-horizontal add-ledger-form" action="{% url 'ledger:add_new_ledger' %}" method="post" autocomplete="off">
+            <form class="form-horizontal add-ledger-form" action="{% url 'add_new_ledger' %}" method="post" autocomplete="off">
                 <div class="form-group">
                     <div class="col-sm-12">
                         {% csrf_token %}
