--- a/templates/ledger/customer_ledger_list.html
+++ b/templates/ledger/customer_ledger_list.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="col-md-12">
     <br>
-    <a href="{% url 'ledger:add_new_ledger' %}"><button type="button" id="back-customer" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Add New</button></a>
+    <a href="{% url 'add_new_ledger' %}"><button type="button" id="back-customer" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Add New</button></a>
     <br><br><br>
     <div class="content-panel table-responsive">
         <table class="table table-striped table-advance table-hover table-bordered purchased-table">
@@ -37,14 +37,14 @@
             {% if customer_ledgers %}
             {% for customer_ledger in customer_ledgers %}
             <tr>
-                <td><a href="{% url 'ledger:customer_ledger_detail' customer_id=customer_ledger.id %}">{{ customer_ledger.customer_name}}</a></td>
+                <td><a href="{% url 'customer_ledger_detail' customer_id=customer_ledger.id %}">{{ customer_ledger.customer_name}}</a></td>
                 <td>{{ customer_ledger.customer_phone }}</td>
                 <td>{{ customer_ledger.customer_type}}</td>
                 <td>{{ customer_ledger.ledger_amount|floatformat:-2 }}</td>
                 <td>{{ customer_ledger.payment_amount|floatformat:-2 }}</td>
                 <td>{{ customer_ledger.remaining_ledger|floatformat:-2 }}</td>
                 <td>
-                    <a href="{% url 'ledger:customer_ledger_detail' customer_id=customer_ledger.id %}"><button class="btn btn-success btn-xs" title="Customer Ledger Detail"><i class="fa fa-eye"></i></button></a>
+                    <a href="{% url 'customer_ledger_detail' customer_id=customer_ledger.id %}"><button class="btn btn-success btn-xs" title="Customer Ledger Detail"><i class="fa fa-eye"></i></button></a>
             </tr>
             {% endfor %}
             {% else %}
