--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <div class="row text-center">
 <!--        add customes div-->
         <div class="col-lg-4 col-md-6">
-            <a href="{% url 'supplier:list_supplier' %}">
+            <a href="{% url 'list_supplier' %}">
                 <div class="panel panel_bg_color" >
                     <div class="panel-heading">
                         <div class="row">
