--- a/templates/supplier/add_supplier.html
+++ b/templates/supplier/add_supplier.html
@@ -9,7 +9,7 @@
     <div class="content-panel">
         <h3 class="text-center"> Add Supplier</h3>
         <div class="panel-body">
-            <form class="form-horizontal add-ledger-form" action="{% url 'supplier:add_supplier' %}" method="post" autocomplete="off">
+            <form class="form-horizontal add-ledger-form" action="{% url 'add_supplier' %}" method="post" autocomplete="off">
                 <div class="form-group">
                     <div class="col-sm-12">
                         {% csrf_token %}
