--- a/templates/supplier/list_supplier.html
+++ b/templates/supplier/list_supplier.html
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-lg-12">
             <br>
-            <a href="{% url 'supplier:add_supplier' %}"><button type="button" id="empolyee" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Create Supplier</button></a>
+            <a href="{% url 'add_supplier' %}"><button type="button" id="empolyee" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Create Supplier</button></a>
             <br><br>
         <div class="col-md-4">
 <!--                    <button type="button" class="btn btn-primary print-invoice-btn mt" onclick="PrintInvoice('print-invoice')">Print Details</button><br>-->
@@ -50,7 +50,7 @@
                         <td>{{ supplier.mobile_no }}</td>
                         <td>
 {#                            <a href="#"><button class="btn btn-danger btn-xs" title="Delete"><i class="fa  fa-trash-o"></i></button></a>#}
-                            <a href="{% url 'supplier:list_supplier_statement' pk=supplier.id %}"><button class="btn btn-success btn-xs" title="All Statements"><i class="fa  fa-info"></i></button></a>
+                            <a href="{% url 'list_supplier_statement' pk=supplier.id %}"><button class="btn btn-success btn-xs" title="All Statements"><i class="fa  fa-info"></i></button></a>
 {#                            <a href="#"><button class="btn btn-info btn-xs"><i class="fa fa-bar-chart-o"></i></button></a>#}
                         </td>
                     </tr>
