--- a/templates/supplier/list_supplier_statement.html
+++ b/templates/supplier/list_supplier_statement.html
@@ -6,9 +6,9 @@
     <div class="row">
         <div class="col-lg-12">
             <br>
-            <a href="{% url 'supplier:list_supplier' %}"><button type="button" id="statement" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing"> Supplier List</button></a>
-            <a href="{% url 'supplier:add_supplier_statement' pk=supplier.id %}"><button type="button" id="statement" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Create Statement</button></a>
-            <a href="{% url 'supplier:payment' pk=supplier.id %}"><button type="button" id="statement" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Payment</button></a>
+            <a href="{% url 'list_supplier' %}"><button type="button" id="statement" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing"> Supplier List</button></a>
+            <a href="{% url 'add_supplier_statement' pk=supplier.id %}"><button type="button" id="statement" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Create Statement</button></a>
+            <a href="{% url 'payment' pk=supplier.id %}"><button type="button" id="statement" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Payment</button></a>
 
             <br><br>
         <div class="col-md-4">
@@ -53,7 +53,7 @@
                         <td>{{ statement.description }}</td>
                         <td>{{ statement.date }}</td>
                         <td>
-                            <a href="{% url 'supplier:update_supplier_statement' pk=statement.id %}"><button class="btn btn-warning btn-xs" title="Edit"><i class="fa  fa-edit"></i></button></a>
+                            <a href="{% url 'update_supplier_statement' pk=statement.id %}"><button class="btn btn-warning btn-xs" title="Edit"><i class="fa  fa-edit"></i></button></a>
                         </td>
                     </tr>
                     {% endfor %}
