integration pis_product to pis_com

--- a/templates/products/add_product_items.html
+++ b/templates/products/add_product_items.html
@@ -4,12 +4,12 @@
 {% block content %}
 <div class="col-md-6">
     <br>
-    <a href="{% url 'product:item_details' pk=product.id %}"><button type="button" id="back-customer" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Product Item List</button></a>
+    <a href="{% url 'item_details' pk=product.id %}"><button type="button" id="back-customer" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Product Item List</button></a>
     <br><br><br>
     <div class="content-panel">
         <h3 class="text-center">{{ request.user.retailer_user.retailer.name }} | Product ({{ product.name }})</h3>
         <div class="panel-body">
-            <form class="form-horizontal product_item_form" action="{% url 'product:add_product_items' product_id=product.id %}" method="post" autocomplete="off">
+            <form class="form-horizontal product_item_form" action="{% url 'add_product_items' product_id=product.id %}" method="post" autocomplete="off">
                 <div class="form-group">
                     <div class="col-sm-12">
                         {% csrf_token %}
