--- a/templates/products/update_stockin.html
+++ b/templates/products/update_stockin.html
@@ -4,8 +4,8 @@
 
     <div class="col-md-12">
         <br>
-       <a href="{% url 'product:stock_items_list' %}"><button type="button" id="back-product" class="btn btn-primary" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Products</button></a>
-        <a href="{% url 'product:stockin_list' product_id=object.product.id %}"><button type="button" id="stock-in" class="btn btn-primary" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Stock Details</button></a>
+       <a href="{% url 'stock_items_list' %}"><button type="button" id="back-product" class="btn btn-primary" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Products</button></a>
+        <a href="{% url 'stockin_list' product_id=object.product.id %}"><button type="button" id="stock-in" class="btn btn-primary" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Stock Details</button></a>
         <br><br><br>
         <div class="content-panel">
             <h3 class="text-center">{{ object.product.name|title }} ({{ object.product.brand_name|title }}) | <small>Stock Update Form</small> </h3>
