--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
         <!--add product div -->
         {% if request.user.retailer_user.role_type == request.user.retailer_user.ROLE_TYPE_DATA_ENTRY_USER or request.user.retailer_user.role_type == request.user.retailer_user.ROLE_TYPE_OWNER or request.user.retailer_user.role_type == request.user.retailer_user.ROLE_TYPE_VIEW_ACCOUNT %}
         <div class="col-lg-4 col-md-6 ">
-            <a href="{% url 'product:stock_items_list' %}">
+            <a href="{% url 'stock_items_list' %}">
                 <div class="panel panel_bg_color">
                     <div class="panel-heading">
                         <div class="row">
@@ -186,7 +186,7 @@
         </div>
         <!--add logs div -->
         <div class="col-lg-4 col-md-6 ">
-            <a href="{% url 'product:daily_stock_logs' %}">
+            <a href="{% url 'daily_stock_logs' %}">
                 <div class="panel panel_bg_color">
                     <div class="panel-heading">
                         <div class="row">
