--- a/templates/products/add_product.html
+++ b/templates/products/add_product.html
@@ -4,13 +4,13 @@
 {% block content %}
 <div class="col-md-6">
     <br>
-    <a href="{% url 'product:stock_items_list' %}"><button type="button" id="back-product" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Product List</button></a>
+    <a href="{% url 'stock_items_list' %}"><button type="button" id="back-product" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Product List</button></a>
     <br><br><br>
     <div class="content-panel">
         <h3 class="text-center">{{ request.user.retailer_user.retailer.name }} Product</h3>
         <span class="item_list_error text-center" style="color:red; display:none">item is already exist</span>
         <div class="panel-body">
-            <form class="form-horizontal add-product-form" action="{% url 'product:add_product' retailer_id=request.user.retailer_user.retailer.id %}" method="post" autocomplete="off">
+            <form class="form-horizontal add-product-form" action="{% url 'add_product' retailer_id=request.user.retailer_user.retailer.id %}" method="post" autocomplete="off">
                 <div class="form-group">
                     <div class="col-sm-12">
                         {% csrf_token %}
@@ -87,7 +87,7 @@
             if (error == true) {
                 return;
             } else {
-                $.get('{% url 'retailer:retailer_products' retailer_id=request.user.retailer_user.retailer.id %}', function(data, status){
+                $.get('{% url 'retailer_products' retailer_id=request.user.retailer_user.retailer.id %}', function(data, status){
                     $.each(data.retailer_products, function(index, value){
                         if ($('.product_name').val() == value.product_name && $('.brand_name').val() == value.brand_name && {{ request.user.retailer_user.retailer.id }} == value.retailer){
                             $('.item_list_error').show();
