--- a/templates/products/add_stock_item.html
+++ b/templates/products/add_stock_item.html
@@ -4,12 +4,12 @@
 {% block content %}
     <div class="col-md-12">
         <br>
-        <a href="{% url 'product:stock_items_list' %}"><button type="button" id="stock-in" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Stock Item List</button></a>
+        <a href="{% url 'stock_items_list' %}"><button type="button" id="stock-in" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Stock Item List</button></a>
         <br><br><br>
         <div class="content-panel">
             <h3 class="text-center">{{ request.user.retailer_user.retailer.name }} | Stock ({{ product.name }}) </h3>
             <div class="panel-body">
-                <form class="form-horizontal product_item_form" action="{% url 'product:add_stock_items' product_id=product.id %}" method="post" autocomplete="off">
+                <form class="form-horizontal product_item_form" action="{% url 'add_stock_items' product_id=product.id %}" method="post" autocomplete="off">
                     <div class="form-group">
                         <div class="col-md-12">
                             <label><strong>Stock Quantity</strong></label>
