--- a/templates/products/claimed_product_list.html
+++ b/templates/products/claimed_product_list.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="col-md-12">
     <br>
-    <a href="{% url 'product:claimed_items' %}"><button type="button" id="claimed-item" class="btn btn-primary" style="float: left" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Claimed Items</button></a>
+    <a href="{% url 'claimed_items' %}"><button type="button" id="claimed-item" class="btn btn-primary" style="float: left" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Claimed Items</button></a>
     <br><br><br>
     <div class="content-panel table-responsive">
         <table class="table table-striped table-advance table-hover table-bordered claimed-item-table">
