--- a/templates/products/product_list.html
+++ b/templates/products/product_list.html
@@ -4,7 +4,7 @@
 {% block content %}
     <div class="col-md-12">
             <br>
-            <a href="{% url 'product:add_product' retailer_id=request.user.retailer_user.retailer.id %}"><button type="button" id="add-product" class="btn btn-primary"  id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Add Product </button></a>
+            <a href="{% url 'add_product' retailer_id=request.user.retailer_user.retailer.id %}"><button type="button" id="add-product" class="btn btn-primary"  id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Add Product </button></a>
             <br><br><br>
             <div class="content-panel table-responsive">
                 <table class="table table-striped table-bordered table-advance table-hover item-table">
@@ -32,15 +32,15 @@
                     <tbody class="product-table-body text-center">
                     {% for item in products %}
                         <tr>
-                            <td><a href="{% url 'product:item_details' pk=item.id %}">{{ item.name}}</a></td>
+                            <td><a href="{% url 'item_details' pk=item.id %}">{{ item.name}}</a></td>
                             <td class="#">{{ item.brand_name }}</td>
                             <td class="#">{{ item.unit_type }}</td>
                             <td>{{ item.product_available_items|floatformat:-2 }}</td>
                             <td>{{ item.product_purchased_items|floatformat:-2 }}</td>
                             <td>{{ item.bar_code}}</td>
                             <td>
-                                <a href="{% url 'product:add_product_items' product_id=item.id %}"><button class="btn btn-primary btn-xs"><i class="fa fa-plus"></i></button></a>
-                                <a href="{% url 'product:item_details' pk=item.id %}"><button class="btn btn-success btn-xs"><i class="fa fa-eye"></i></button></a>
+                                <a href="{% url 'add_product_items' product_id=item.id %}"><button class="btn btn-primary btn-xs"><i class="fa fa-plus"></i></button></a>
+                                <a href="{% url 'item_details' pk=item.id %}"><button class="btn btn-success btn-xs"><i class="fa fa-eye"></i></button></a>
                             </td>
                         </tr>
                     {% endfor %}
