--- a/templates/products/stock_list.html
+++ b/templates/products/stock_list.html
@@ -4,7 +4,7 @@
 {% block content %}
     <div class="col-md-12">
             <br>
-            <a href="{% url 'product:add_product' retailer_id=request.user.retailer_user.retailer.id %}"><button type="button" id="add-product" class="btn btn-primary"  id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Add Product </button></a>
+            <a href="{% url 'add_product' retailer_id=request.user.retailer_user.retailer.id %}"><button type="button" id="add-product" class="btn btn-primary"  id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Add Product </button></a>
             <br><br><br>
             <div class="content-panel table-responsive">
                 <table class="table table-striped table-bordered table-advance table-hover item-table">
@@ -33,7 +33,7 @@
                     <tbody class="product-table-body text-center">
                     {% for item in object_list %}
                         <tr>
-                            <td><a href="{% url 'product:item_details' pk=item.id %}">{{ item.name}}</a></td>
+                            <td><a href="{% url 'item_details' pk=item.id %}">{{ item.name}}</a></td>
                             <td class="#">{{ item.brand_name }}</td>
                             <td class="#">{{ item.unit_type }}</td>
                             <td>{{ item.total_items|floatformat:-2 }}</td>
@@ -41,9 +41,9 @@
                             <td>{{ item.product_purchased_items|floatformat:-2 }}</td>
                             <td>{{ item.bar_code }}</td>
                             <td>
-                                <a href="{% url 'product:update_product' pk=item.id %}"><button class="btn btn-success btn-xs"><i class="fa fa-edit"></i></button></a>
-                                <a href="{% url 'product:stockin_list' product_id=item.id %}"><button class="btn btn-primary btn-xs"><i class="fa fa-plus"></i></button></a>
-                                <a href="{% url 'product:stockout_list' product_id=item.id %}"><button class="btn btn-danger btn-xs" title="Stock Out"><i class="fa fa-minus"></i></button></a>
+                                <a href="{% url 'update_product' pk=item.id %}"><button class="btn btn-success btn-xs"><i class="fa fa-edit"></i></button></a>
+                                <a href="{% url 'stockin_list' product_id=item.id %}"><button class="btn btn-primary btn-xs"><i class="fa fa-plus"></i></button></a>
+                                <a href="{% url 'stockout_list' product_id=item.id %}"><button class="btn btn-danger btn-xs" title="Stock Out"><i class="fa fa-minus"></i></button></a>
                             </td>
                         </tr>
                     {% endfor %}
@@ -52,8 +52,8 @@
                 {% if paginator.page_range|length > 1 %}
                     <div class="text-center">
                         <ul class="pagination">
-                            <li><a  style="background-color: #3070A8; color: white" class="page_previous" href="{% if page_obj.has_previous %}{% url 'product:stock_items_list' %}?page={{ page_obj.previous_page_number }}{% else %}#{% endif %}" title="Previous"><<</a></li>
-                            <li><a style="background-color: #3070A8; color: white" class="page_next" href="{% if page_obj.has_next %}{% url 'product:stock_items_list' %}?page={{ page_obj.next_page_number }}{% else %}#{% endif %}" title="Next">>></a></li>
+                            <li><a  style="background-color: #3070A8; color: white" class="page_previous" href="{% if page_obj.has_previous %}{% url 'stock_items_list' %}?page={{ page_obj.previous_page_number }}{% else %}#{% endif %}" title="Previous"><<</a></li>
+                            <li><a style="background-color: #3070A8; color: white" class="page_next" href="{% if page_obj.has_next %}{% url 'stock_items_list' %}?page={{ page_obj.next_page_number }}{% else %}#{% endif %}" title="Next">>></a></li>
                         </ul>
                     </div>
                 {% endif %}
@@ -66,7 +66,7 @@
     <script>
         $(function () {
             $('.search').on('click', function () {
-                var url = '{% url "product:stock_items_list" %}';
+                var url = '{% url "stock_items_list" %}';
                 window.location.href  = url + '?' + 'name=' + $('.name_search').val();
             });
         });
