--- a/templates/products/update_product.html
+++ b/templates/products/update_product.html
@@ -3,13 +3,13 @@
 {% block content %}
     <div class="col-md-6">
         <br>
-        <a href="{% url 'product:items_list' %}"><button type="button" id="back-product" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Product List</button></a>
+        <a href="{% url 'items_list' %}"><button type="button" id="back-product" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Product List</button></a>
         <br><br><br>
         <div class="content-panel">
             <h3 class="text-center">{{ request.user.retailer_user.retailer.name }} <small>Product Update Form</small></h3>
              <span class="item_list_error text-center" style="color:red; display:none">item is already exist</span>
             <div class="panel-body">
-                <form class="form-horizontal add-product-form" action="{% url 'product:update_product' pk=object.id %}" method="post" autocomplete="off">
+                <form class="form-horizontal add-product-form" action="{% url 'update_product' pk=object.id %}" method="post" autocomplete="off">
                     <div class="form-group">
                         <div class="col-sm-12">
                             {% csrf_token %}
