--- a/templates/sales/invoice_detail.html
+++ b/templates/sales/invoice_detail.html
@@ -19,7 +19,7 @@
 
     <div class="col-lg-10 col-md-10 col-sm-10">
         <br>
-        <a href="{% url 'sales:create_invoice' %}"><button type="button" id="invoice" class="btn btn-primary"  id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Create Invoice</button></a>
+        <a href="{% url 'create_invoice' %}"><button type="button" id="invoice" class="btn btn-primary"  id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Create Invoice</button></a>
         <button type="button" class="btn btn-primary print-invoice-btn" onclick="PrintInvoice('print-invoice')" >Print Invoice</button>
         <br><br><br>
         <div class="content-panel print-invoice" id="print-invoice" style="padding: 5px">
