--- a/templates/sales/create_invoice.html
+++ b/templates/sales/create_invoice.html
@@ -32,7 +32,7 @@
 
 	<div class="col-lg-12 col-md-12 col-sm-12">
 		<br>
-        <a href="{% url 'sales:invoice_list' %}"><button type="button" id="invoice" class="btn btn-primary"  id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Invoice List</button></a>
+        <a href="{% url 'invoice_list' %}"><button type="button" id="invoice" class="btn btn-primary"  id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Invoice List</button></a>
         <br><br><br>
 		<div class="content-panel" style="padding: 5px">
 			<div class="row" style="font-size: large">
@@ -196,7 +196,7 @@
                 avgTimeByChar: 40, // it's not a barcode if a character takes longer than 100ms
                 endChar: [13],
                 onComplete: function(barcode, qty){
-                    $.post("{% url 'sales:product_details_api' %}", {
+                    $.post("{% url 'product_details_api' %}", {
                         code: barcode
                     }, function (result, status) {
                         {# Create Item list by scanning the bar code #}
@@ -327,7 +327,7 @@
                 var customer_value = $('.customer').val();
                 var customer_id = $('#customer-list [value="' + customer_value + '"]').data('id');
 
-                $.post("{% url 'sales:generate_invoice_api' %}", {
+                $.post("{% url 'generate_invoice_api' %}", {
                         customer_id: customer_id,
                         customer_name: customer_name,
                         customer_phone: customer_phone,
