--- a/templates/sales/invoice_list.html
+++ b/templates/sales/invoice_list.html
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="col-md-12">
             <br>
-        <a href="{% url 'sales:create_invoice' %}"><button type="button" id="invoice" class="btn btn-primary"  id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Create Invoice</button></a>
+        <a href="{% url 'create_invoice' %}"><button type="button" id="invoice" class="btn btn-primary"  id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Create Invoice</button></a>
         <br><br><br>
             <div class="content-panel table-responsive">
                 <table class="table table-striped table-advance table-hover table-bordered invoice-table">
@@ -33,15 +33,15 @@
                     <tbody class="invoice-table-body text-center">
                     {% for invoice in object_list %}
                         <tr>
-                            <td><a href="{% url 'sales:invoice_detail' invoice_id=invoice.id %}">{{ invoice.receipt_no }}</a></td>
+                            <td><a href="{% url 'invoice_detail' invoice_id=invoice.id %}">{{ invoice.receipt_no }}</a></td>
                             <td>{% if invoice.customer %}{{ invoice.customer.customer_name|title}}{% else %}-{% endif %}</td>
                             <td>{{ invoice.total_quantity }}</td>
                             <td>{{ invoice.grand_total|floatformat:-2 }}</td>
                             <td>{{ invoice.created_at|date }}</td>
                             <td>
-                                <a href="{% url 'sales:invoice_update' id=invoice.id %}"><button class="btn btn-primary btn-xs"><i class="fa fa-edit" title="Invoice list"></i></button></a>
-                                <a href="{% url 'sales:invoice_detail' invoice_id=invoice.id %}"><button class="btn btn-success btn-xs"><i class="fa fa-eye" title="Invoice list"></i></button></a>
-                                <a href="{% url 'sales:delete' pk=invoice.id %}"><button class="btn btn-danger btn-xs delete" onClick="deleteFunction()"><i class="fa fa-minus"></i></button></td>
+                                <a href="{% url 'invoice_update' id=invoice.id %}"><button class="btn btn-primary btn-xs"><i class="fa fa-edit" title="Invoice list"></i></button></a>
+                                <a href="{% url 'invoice_detail' invoice_id=invoice.id %}"><button class="btn btn-success btn-xs"><i class="fa fa-eye" title="Invoice list"></i></button></a>
+                                <a href="{% url 'delete' pk=invoice.id %}"><button class="btn btn-danger btn-xs delete" onClick="deleteFunction()"><i class="fa fa-minus"></i></button></td>
 
                             </td>
                         </tr>
@@ -51,8 +51,8 @@
                 {% if paginator.page_range|length > 1 %}
                     <div class="text-center">
                         <ul class="pagination">
-                            <li><a  style="background-color: #3070A8; color: white" class="page_previous" href="{% if page_obj.has_previous %}{% url 'sales:invoice_list' %}?page={{ page_obj.previous_page_number }}{% else %}#{% endif %}" title="Previous"><<</a></li>
-                            <li><a style="background-color: #3070A8; color: white" class="page_next" href="{% if page_obj.has_next %}{% url 'sales:invoice_list' %}?page={{ page_obj.next_page_number }}{% else %}#{% endif %}" title="Next">>></a></li>
+                            <li><a  style="background-color: #3070A8; color: white" class="page_previous" href="{% if page_obj.has_previous %}{% url 'invoice_list' %}?page={{ page_obj.previous_page_number }}{% else %}#{% endif %}" title="Previous"><<</a></li>
+                            <li><a style="background-color: #3070A8; color: white" class="page_next" href="{% if page_obj.has_next %}{% url 'invoice_list' %}?page={{ page_obj.next_page_number }}{% else %}#{% endif %}" title="Next">>></a></li>
                         </ul>
                     </div>
                 {% endif %}
