--- a/templates/sales/update_invoice.html
+++ b/templates/sales/update_invoice.html
@@ -32,7 +32,7 @@
 
 	<div class="col-lg-10 col-md-10 col-sm-10">
 		<br>
-		<a href="{% url 'sales:invoice_list' %}"><button type="button" id="invoice" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Invoice List</button></a>
+		<a href="{% url 'invoice_list' %}"><button type="button" id="invoice" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Invoice List</button></a>
 		<br><br>
 		<div class="content-panel" style="padding: 5px">
 			<div class="row">
@@ -284,7 +284,7 @@
 
                 var customer_value = $('.customer').val();
                 var customer_id = $('#customer-list [value="' + customer_value + '"]').data('id');
-                $.post("{% url 'sales:update_invoice_api' %}", {
+                $.post("{% url 'update_invoice_api' %}", {
                         customer_id: customer_id,
                         customer_name: customer_name,
                         customer_phone: customer_phone,
